--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Personal Website</title>
+<title>About me</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -236,15 +236,21 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Personal Website</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="index.html">Sarah George</a>
 </li>
 <li>
   <a href="about.html">Research</a>
+</li>
+<li>
+  <a href="teaching.html">Teaching</a>
+</li>
+<li>
+  <a href="cv.html">CV</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -258,14 +264,15 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Personal Website</h1>
+<h1 class="title toc-ignore">About me</h1>
 
 </div>
 
 
-<p>Welcome! I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
-<p>Keywords: Industrial organization, asset pricing, technology adoption</p>
-<p>Contact Information: sgeorg [at] sas.upenn.edu +1 (301)-531-0163</p>
+<p><img src="image.png" width="50%" /></p>
+<p><strong>Welcome!</strong> I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
+<p><strong>Keywords</strong>: Industrial organization, asset pricing, technology adoption</p>
+<p><strong>Contact Information</strong>: sgeorg [at] sas.upenn.edu +1 (301)-531-0163</p>
 
 
 
