--- a/teaching.html
+++ b/teaching.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Research</title>
+<title>Teaching</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,7 +264,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Research</h1>
+<h1 class="title toc-ignore">Teaching</h1>
 
 </div>
 
