--- a/cv.html
+++ b/cv.html
@@ -269,7 +269,12 @@ $(document).ready(function () {
 </div>
 
 
-
+<p>You can find my CV</p>
+<!-- ```{r echo=False} -->
+<!-- library(xfun) -->
+<!-- here=embed_file("sarah_george_resume.pdf") -->
+<!-- here -->
+<!-- ``` -->
 
 
 
