--- a/about.html
+++ b/about.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
 </div>
 
 
-
+<p><strong>Working papers</strong> “Price and frictions in the market for IPv4 addresses” - <strong>Job Market Paper</strong></p>
 
 
 
