--- a/cv.html
+++ b/cv.html
@@ -275,6 +275,7 @@ $(document).ready(function () {
 <!-- here=embed_file("sarah_george_resume.pdf") -->
 <!-- here -->
 <!-- ``` -->
+<p><img src="sarah_geroge_resume.pdf" style="width:50%"></p>
 
 
 
