--- a/index.html
+++ b/index.html
@@ -244,9 +244,6 @@ $(document).ready(function () {
   <a href="index.html">Sarah George</a>
 </li>
 <li>
-  <a href="about.html">Research</a>
-</li>
-<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -273,6 +270,8 @@ $(document).ready(function () {
 <p><strong>Welcome!</strong> I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
 <p><strong>Keywords</strong>: Industrial organization, asset pricing, technology adoption</p>
 <p><strong>Contact Information</strong>: sgeorg [at] sas.upenn.edu +1 (301)-531-0163</p>
+<p><strong>Working papers</strong></p>
+<p>“Price and frictions in the market for IPv4 addresses” - <strong>Job Market Paper</strong></p>
 
 
 
