--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>cv</title>
+<title>Contact</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -261,12 +261,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">cv</h1>
+<h1 class="title toc-ignore">Contact</h1>
 
 </div>
 
 
-<p>You can find my CV <a href="https://github.com/sgeorg92/sgeorg92.github.io/Sarah_George_Resume.pdf">here</a></p>
+<p><strong>Mailing address</strong> Department of Economics University of Pennsylvania Philadelphia, PA 19104</p>
+<p><strong>Email address </strong> <a href="mailto:sgeorg@sas.upenn.edu" class="email">sgeorg@sas.upenn.edu</a></p>
+<p><strong>Phone</strong> 301-531-0163</p>
 
 
 
