--- a/cv.html
+++ b/cv.html
@@ -266,7 +266,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>You can find my CV <a href="https://github.com/sgeorg92/sgeorg92.github.io/Sarah_George_Resume.pdf">here</a></p>
+<p>You can find my CV <a href="Sarah_George_Resume.pdf">here</a></p>
 
 
 
