--- a/index.html
+++ b/index.html
@@ -266,10 +266,19 @@ $(document).ready(function () {
 </div>
 
 
-<p><img src="image.png" width="50%" /></p>
-<p><strong>Welcome!</strong> I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
-<p><strong>Keywords</strong>: Industrial organization, technology adoption, network effects, secondary markets</p>
-<p><strong>Job Market Paper</strong>: “IPv4 address market and transition to the next protocol”</p>
+<div class="row">
+<div class="col-md-6">
+<p><br><br></p>
+<p><strong>Welcome!</strong></p>
+<p>I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
+<p><strong>Keywords</strong>:</p>
+<p>Industrial organization, technology adoption, network effects, secondary markets</p>
+</div>
+<div class="col-md-6">
+<p><img src="image.png" width="100%" /></p>
+</div>
+</div>
+<p><strong>Job Market Paper</strong>: <strong><em>“IPv4 address market and transition to the next protocol”</em></strong></p>
 <p><strong>Abstract</strong>: In this paper I study frictions in the market for IPv4 addresses - a market created to mitigate short term scarcity of IPv4 addresses as firms transitioned the next protocol - IPv6 addresses. I study the impact of adjustment and switching costs and network effects on prices and IPv6 transition. Collecting novel data, I lay out key empirical features of this industry and develop a dynamic model of firm behavior in the IPv4 market and IPv6 adoption. Next, I estimate the model parameters using simulated method of moments and use this to predict prices and IPv6 adoption. This model can explain the striking increase in prices observed as well as the delay in IPv6 adoption. I find that it would take 33 years to reach near complete IPv6 adoption. I also find that enterprise firms have 58% higher per-unit switching costs and content provider firms 24% higher compared to ISPs. In counterfactual simulations, I find that in the absence of switching and adjustment costs prices are lower and IPv6 adoption happens almost 20 years faster. I find that the producer surplus is 88% higher than in the baseline. In the second counterfactual I find that in the absence of network effects firms would adopt IPv6 almost immediately whereas prices reach a peak and fall within three years. Producer surplus in this scenario is lower than the baseline by 1%.</p>
 
 
