--- a/contact.html
+++ b/contact.html
@@ -249,6 +249,9 @@ $(document).ready(function () {
 <li>
   <a href="cv.html">CV</a>
 </li>
+<li>
+  <a href="research.html">Research</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -266,9 +269,17 @@ $(document).ready(function () {
 </div>
 
 
-<p><strong>Mailing address</strong> Department of Economics University of Pennsylvania Philadelphia, PA 19104</p>
-<p><strong>Email address </strong> <a href="mailto:sgeorg@sas.upenn.edu" class="email">sgeorg@sas.upenn.edu</a></p>
-<p><strong>Phone</strong> 301-531-0163</p>
+<p><font size="3.7"></p>
+<p><strong>Mailing address:</strong></p>
+<p>Department of Economics,</p>
+<p>Room 635, PCPSE,</p>
+<p>133 South, 36th Street</p>
+<p>Philadelphia, PA 19104</p>
+<p><strong>Email address:</strong></p>
+<p><a href="mailto:sgeorg@sas.upenn.edu" class="email">sgeorg@sas.upenn.edu</a></p>
+<p><strong>Phone:</strong></p>
+<p>301-531-0163</p>
+<p></font></p>
 
 
 
