--- a/cv.html
+++ b/cv.html
@@ -244,6 +244,9 @@ $(document).ready(function () {
   <a href="index.html">Sarah George</a>
 </li>
 <li>
+  <a href="research.html">Research</a>
+</li>
+<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -266,7 +269,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>You can find my CV <a href="Sarah_George_Resume.pdf">here</a></p>
+<p><font size="3.7"></p>
+<p>You can find my CV <a href="Sarah_George_Resume.pdf">here</a> </font></p>
 
 
 
