--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About me</title>
+<title>Sarah George</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -244,6 +244,9 @@ $(document).ready(function () {
   <a href="index.html">Sarah George</a>
 </li>
 <li>
+  <a href="research.html">Research</a>
+</li>
+<li>
   <a href="teaching.html">Teaching</a>
 </li>
 <li>
@@ -261,25 +264,46 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About me</h1>
+<h1 class="title toc-ignore">Sarah George</h1>
 
 </div>
 
 
+<style>
+div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
+</style>
+<div class="grey">
 <div class="row">
 <div class="col-md-6">
-<p><br><br></p>
+<p><img src="image.png" width="400%" /></p>
+</div>
+<div class="col-md-6">
+<p><br><br> <font size="4"></p>
 <p><strong>Welcome!</strong></p>
 <p>I am a PhD candidate in Economics at the University of Pennsylvania. My research focuses on the economics in the market for IPv4 addresses and transition to the next technology.</p>
 <p><strong>Keywords</strong>:</p>
 <p>Industrial organization, technology adoption, network effects, secondary markets</p>
-</div>
-<div class="col-md-6">
-<p><img src="image.png" width="100%" /></p>
+<p></font></p>
 </div>
 </div>
-<p><strong>Job Market Paper</strong>: <strong><em>“IPv4 address market and transition to the next protocol”</em></strong></p>
-<p><strong>Abstract</strong>: In this paper I study the market for internet addresses - a market created to mitigate short term scarcity of IPv4 addresses as firms transitioned to the next protocol. I analyze the inefficiencies that arise from the decentralized transition from IPv4 to IPv6. Inefficiencies arise due to the presence of adjustment costs, switching costs and network effects which are frictions in the market. Towards this end, I develop a dynamic model of firm behavior in the IPv4 market and IPv6 adoption. Then I collect a novel data to estimate the main parameters using simulated method of moments and use this to predict prices and IPv6 adoption. This model can explain the striking increase in prices observed and in the current environment near complete IPv6 adoption will take 33 years. I also find that enterprise firms (universities and companies that are mostly users) have 58% higher per-unit switching costs and content provider firms 24% higher compared to ISPs. In counterfactual simulations, I find that in the absence of switching and adjustment costs prices are lower and IPv6 adoption happens almost 20 years faster. I find that the producer surplus is 88% higher than in the baseline. In the second counterfactual I find that with inter-operable network effects across both protocols firms would adopt IPv6 almost immediately whereas prices reach a peak and fall within three years. Producer surplus in this scenario is lower than the baseline by 1%. In the third counterfactual I find the optimal adoption path that maximizes aggregate producer surplus and find that the surplus is higher than the baseline by 25%.</p>
+</div>
+<p><span class="math inline">\(~\)</span></p>
+<style>
+div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
+</style>
+<div class = "blue">
+<center>
+<p><font size="4"> <strong>Contact:</strong> </font></p>
+<p><font size="4"></p>
+<p>Department of Economics,</p>
+<p>Room 635, PCPSE,</p>
+<p>133 South, 36th Street</p>
+<p>Philadelphia, PA 19104</p>
+<p><a href="mailto:sgeorg@sas.upenn.edu" class="email">sgeorg@sas.upenn.edu</a></p>
+<p>301-531-0163</p>
+</div>
+</center>
+<p></font></p>
 
 
 
