--- a/research.html
+++ b/research.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Teaching</title>
+<title>Research</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -264,25 +264,20 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Teaching</h1>
+<h1 class="title toc-ignore">Research</h1>
 
 </div>
 
 
 <style>
-div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
+div.blue { background-color:#e6f0ff; border-radius: 5px; padding: 20px;}
 </style>
-<div class="grey">
-<p><font size="4"></p>
-<p><strong>Department of Economics, University of Pennsylvania</strong></p>
-<p>Head teaching assistant (TA) for Econ001 (Introduction to Micro Economics), 2018 (Fall)-2021 (Spring)</p>
-<p>TA for Econ001 (Introduction to Micro Economics), 2018 (Spring)</p>
-<p>TA for Econ101 (Intermediate Economics),2017 (Fall)</p>
-<p><strong>Department for Economics, London School of Economics and Political Science</strong></p>
-<p>TA for Econ101 (Introductory Microeconomics) 2015 (Fall-Spring)</p>
-<p>Nominated for the best teaching award at LSE.</p>
-</div>
+<div class="blue">
+<p><font size="3.7"><br />
+<strong>Job Market Paper</strong>: <strong><em>“IPv4 address market and transition to the next protocol”</em></strong></p>
+<p><strong>Abstract</strong>: In this paper I study the market for internet addresses - a market created to mitigate short term scarcity of IPv4 addresses as firms transitioned to the next protocol. I analyze the inefficiencies that arise from the decentralized transition from IPv4 to IPv6. Inefficiencies arise due to the presence of adjustment costs, switching costs and network effects which are frictions in the market. Towards this end, I develop a dynamic model of firm behavior in the IPv4 market and IPv6 adoption. Then I collect a novel data to estimate the main parameters using simulated method of moments and use this to predict prices and IPv6 adoption. This model can explain the striking increase in prices observed and in the current environment near complete IPv6 adoption will take 33 years. I also find that enterprise firms (universities and companies that are mostly users) have 58% higher per-unit switching costs and content provider firms 24% higher compared to ISPs. In counterfactual simulations, I find that in the absence of switching and adjustment costs prices are lower and IPv6 adoption happens almost 20 years faster. I find that the producer surplus is 88% higher than in the baseline. In the second counterfactual I find that with inter-operable network effects across both protocols firms would adopt IPv6 almost immediately whereas prices reach a peak and fall within three years. Producer surplus in this scenario is lower than the baseline by 1%. In the third counterfactual I find the optimal adoption path that maximizes aggregate producer surplus and find that the surplus is higher than the baseline by 25%.</p>
 <p></font></p>
+</div>
 
 
 
