--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Sarah George</a>
+  <a href="index.html">About me</a>
 </li>
 <li>
   <a href="research.html">Research</a>
@@ -275,7 +275,7 @@ div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
 <div class="grey">
 <div class="row">
 <div class="col-md-6">
-<p><img src="image.png" width="400%" /></p>
+<p><img src="image.png" width="518" /></p>
 </div>
 <div class="col-md-6">
 <p><br><br> <font size="4"></p>
