--- a/teaching.html
+++ b/teaching.html
@@ -241,7 +241,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Sarah George</a>
+  <a href="index.html">About me</a>
 </li>
 <li>
   <a href="research.html">Research</a>
@@ -275,12 +275,12 @@ div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
 <div class="grey">
 <p><font size="4"></p>
 <p><strong>Department of Economics, University of Pennsylvania</strong></p>
-<p>Head teaching assistant (TA) for Econ001 (Introduction to Micro Economics), 2018 (Fall)-2021 (Spring)</p>
+<p>Head TA for Econ001 (Introduction to Micro Economics), 2018 (Fall)-2021 (Spring)</p>
 <p>TA for Econ001 (Introduction to Micro Economics), 2018 (Spring)</p>
-<p>TA for Econ101 (Intermediate Economics),2017 (Fall)</p>
+<p>TA for Econ101 (Intermediate Economics), 2017 (Fall)</p>
 <p><strong>Department for Economics, London School of Economics and Political Science</strong></p>
-<p>TA for Econ101 (Introductory Microeconomics) 2015 (Fall-Spring)</p>
-<p>Nominated for the best teaching award at LSE.</p>
+<p>TA for Econ101 (Introductory Microeconomics), 2015 (Fall-Spring)</p>
+<p>Nominated for the best teaching award at LSE</p>
 </div>
 <p></font></p>
 
