--- a/index.html
+++ b/index.html
@@ -269,13 +269,14 @@ $(document).ready(function () {
 </div>
 
 
+<p>&lt;metaname=“google-site-verification: google8a02a5f64290f461.html”&gt;</p>
 <style>
 div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
 </style>
 <div class="grey">
 <div class="row">
 <div class="col-md-6">
-<p><img src="image.png" width="518" /></p>
+<p><img src="IMG_2456.jpg" width="977" /></p>
 </div>
 <div class="col-md-6">
 <p><br><br> <font size="4"></p>
