--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>&lt;metaname=“google-site-verification: google8a02a5f64290f461.html”&gt;</p>
+<!-- <metaname="google-site-verification: google8a02a5f64290f461.html"> -->
 <style>
 div.grey { background-color:#fff5e6; border-radius: 5px; padding: 20px;}
 </style>
